# AOC_2020

./: Cargo.toml  README.md  Readme.md  hi  index.html  nd.sh  wasm.sh
.github/workflows/: rust-wasm.yml  rust.yml
data/: datax
pkg/: README.md  aoc.d.ts  aoc.js  aoc.js.bk  aoc_bg.wasm  aoc_bg.wasm.d.ts
src/: lib.rs
src/day/: dayx.rs  mod.rs  x.rs
src/mach/: day1.rs  day2.rs  day5.rs  dayx.rs  mod.rs
