[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["sagudev <samo.golez@outlook.com>"]
edition = "2018"
default-run = "day10"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "dayx"
path = "src/bin/dayx.rs"

[[bin]]
name = "day10"
path = "src/bin/day10.rs"

[[bin]]
name = "day9"
path = "src/bin/day9.rs"

[[bin]]
name = "day8"
path = "src/bin/day8.rs"

[[bin]]
name = "day7"
path = "src/bin/day7.rs"

[[bin]]
name = "day6"
path = "src/bin/day6.rs"

[[bin]]
name = "day5"
path = "src/bin/day5.rs"

[[bin]]
name = "day4"
path = "src/bin/day4.rs"

[[bin]]
name = "day3"
path = "src/bin/day3.rs"

[[bin]]
name = "day2"
path = "src/bin/day2.rs"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[dependencies]
